hphp/test/zend7/Zend/tests/bug38047.php.expectf
Non-static method A::A_ftk() should not be called statically
1 %sbug38047.php:13 get_error_context()
2 %sbug38047.php:36 kalus_error_handler()


Fatal error: %s
Stack trace:
#0 %sbug38047.php(36): A::A_ftk()
#1 {main}
  thrown in %sbug38047.php on line 7